# solana-twitter

./: .gitignore  404.html  Anchor.toml  DEVemLxXHPz1tbnBbTVXtvNBHupP2RCBw1jTFN8Uz3FD.json  README.md  build-prod.sh  deploy-cartesi-prod.sh  deploy-cartesi.sh  index.html  package-lock.json  package.json
.github/workflows/: front-publish.yml
app/: .env  .env.devnet  .env.mainnet  README.md  package.json  tsconfig.json  vue.config.js
app/src/: App.vue
app/src/api/: delete-tweet.ts  fetch-tweets.ts  get-tweet.ts  send-tweet.ts  update-tweet.ts
app/src/cartesi/: connect.ts
app/src/components/: PageProfile.vue  (+3 more)
css/: app.5888a4df.css  app.b8ccfce3.css  app.ec12554f.css
js/: 34.c0d5480d.js  34.c0d5480d.js.map  480.de696042.js  480.de696042.js.map  480.ef2de599.js  480.ef2de599.js.map  app.30a5ea24.js  app.30a5ea24.js.map  app.4927da93.js  app.4927da93.js.map  app.4efa65c7.js  app.4efa65c7.js.map  app.96733f2f.js  app.96733f2f.js.map  app.b25c208b.js  app.b25c208b.js.map  app.dea23c23.js  app.dea23c23.js.map  chunk-vendors.0da5e229.js  chunk-vendors.3fafbdcc.js  chunk-vendors.bc65a9fe.js  chunk-vendors.c9f5871e.js  chunk-vendors.d000b2af.js  node_modules_blocto_sdk_dist_blocto-sdk_umd_js.js  node_modules_ledgerhq_hw-transport-webhid_lib-es_TransportWebHID_js.js  node_modules_project-serum_sol-wallet-adapter_dist_esm_index_js.js  node_modules_solflare-wallet_sdk_lib_esm_index_js.js  node_modules_toruslabs_solana-embed_dist_solanaEmbed_esm_js.js
programs/solana-twitter/: Cargo.toml
programs/solana-twitter/src/: lib.rs  main.rs
tests/: solana-twitter.ts
(+16 files in other folders)
