[package]
name = "solana-twitter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_twitter"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# remove original anchor
# anchor-lang = "0.25.0"

# include Cartesi lib
# cartesi-solana = { path = "../../../cartesi-solana" }
cartesi-solana = "0.1.0"
